@@ -1,5 +1,9 @@
 2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/normal/cmdline.c (grub_cmdline_get): Plug memory leak.
+
+2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/kern/file.c (grub_file_open): Free file->name on failure.
 	(grub_file_close): Free file->name.
 
